# BatStats

./: .gitignore  README.md
.github/workflows/: rust.yml
Backend/: Cargo.toml
Backend/src/: asylum.rs  city.rs  drive_upload.rs  gist_upload.rs  knight.rs  main.rs  mastery.rs  origins.rs  speedrun_utils.rs  utils.rs
Backend/src/speedrun_api/: cache.rs  http_utils.rs  mod.rs  src_api.rs  src_api_types.rs  src_cache.rs
Backend/src/speedrun_api/types/: category.rs  core.rs  game.rs  leaderboard.rs  mod.rs  run.rs  traits.rs  user.rs  variable.rs
Frontend/: package-lock.json  package.json
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/components/: ExplainerModal.tsx  TimeTable.tsx
