[package]
name = "BatStats"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3.31"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = "0.12.22"
url = "2.5.4"
