[package]
name = "BatStats"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
url = "2.5.4"
dashmap = "6.1.0"
once_cell = "1.21.3"
